--- a/public/styles/globalStyles.css
+++ b/public/styles/globalStyles.css
@@ -43,6 +43,13 @@
   --fs-5xl: 3rem;
   --fs-6xl: 4rem;
 
+  --lh-none: 1;
+  --lh-tight: 1.25;
+  --lh-snug: 1.375;
+  --lh-normal: 1.5;
+  --lh-relaxed: 1.625;
+  --lh-loose: 2;
+
   /* // ------ SHADOWS ------ // */
   --bs-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.04);
   --bs-default: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
