--- a/public/styles/globalStyles.css
+++ b/public/styles/globalStyles.css
@@ -60,6 +60,9 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   --bs-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   --bs-inner: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+
+  /* LAYOUT */
+  --zi-nav: 100;
 }
 
 /* DARK MODE */
