--- a/public/styles/globalStyles.css
+++ b/public/styles/globalStyles.css
@@ -60,6 +60,7 @@
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
   --bs-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   --bs-inner: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+  --bs-outline: 0 0 0 3px rgba(66, 153, 225, 0.5);
 
   /* LAYOUT */
   --zi-nav: 100;
@@ -92,12 +93,12 @@ div[data-colormode='dark'] {
   padding: 0;
   box-sizing: border-box;
 }
-*:focus {
-  outline: none;
-}
 a {
   text-decoration: none;
 }
 body {
   font-family: var(--ff-sans);
+}
+::selection {
+  background: #2cefb4;
 }
