updated readme and some blocks

--- a/public/styles/globalStyles.css
+++ b/public/styles/globalStyles.css
@@ -99,6 +99,8 @@ a {
 }
 body {
   font-family: var(--ff-sans);
+  color: var(--grey-9);
+  background: var(--background-color);
 }
 ::selection {
   background: var(--selection-background);
