--- a/public/styles/globalStyles.css
+++ b/public/styles/globalStyles.css
@@ -24,6 +24,8 @@
   --teal-2: hsl(197, 61%, 37%);
   --teal-3: hsl(197, 100%, 25%);
 
+  --link-color: #0070f3;
+
   --background-color: white;
 
   /* FONTS */
@@ -31,7 +33,7 @@
     'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', 'Noto Color Emoji';
   --ff-serif: Georgia, serif;
-  --ff-mono: Monaco;
+  --ff-mono: Menlo, Monaco, 'Courier New', monospace;
 
   --fs-xs: 0.75rem;
   --fs-sm: 0.875rem;
@@ -84,6 +86,8 @@ div[data-colormode='dark'] {
   --teal-1: hsl(197, 100%, 25%);
 
   --grey-0: hsl(197, 26%, 7%);
+
+  --link-color: #55adff;
 
   --background-color: var(--grey-0);
 }
