fixes here and there

--- a/app/global.css
+++ b/app/global.css
@@ -11,6 +11,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-synthesis-weight: none;
 }
 
 ::selection {
